--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,11 +1,11 @@
 .banner{
 	padding-top: 120px;
-	background-image: url(../img/jared-sluyter-342881@1x.jpg);
+	background-image: url(../img/main-banner@1x.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 40% 50%;
 	@include retina {
-		background-image: url(../img/jared-sluyter-342881@2x.jpg);
+		background-image: url(../img/main-banner@2x.jpg);
 	}
 	.container{
 		.content{
@@ -17,10 +17,10 @@
 			.title-big{
 				color: $white;
 				span{
-					padding-bottom: 15px;
+					padding-bottom: 10px;
 					border-bottom: 5px solid $aqua-blue;
 					@media (min-width: 768px) {
-						padding-bottom: 25px;
+						padding-bottom: 20px;
 					}
 				}
 			}
@@ -28,10 +28,8 @@
 				padding: 25px 0;
 				color: $white;
 				line-height: 30px;
-				text-shadow: 0px 0px 5px #000000;
 				@media (min-width: 768px){
-					padding: 50px 0;
-					text-shadow: none;
+					padding: 45px 0;
 				}
 			}
 			@media (min-width: 768px){
