--- a/scss/_partners.scss
+++ b/scss/_partners.scss
@@ -7,6 +7,9 @@
 		justify-content: space-around;
 		picture{
 			padding: 15px 10px;
+			img{
+				max-height: 45px;
+			}
 			@media (min-width: 768px) and (max-width: 1200px){
 				display: flex;
 				justify-content: center;
@@ -18,6 +21,9 @@
 		}
 		@media (min-width: 768px) {
 			justify-content: space-between;
+		}
+		@media (min-width: 1140px) {
+			flex-wrap: nowrap;
 		}
 	}
 }
