--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -2,12 +2,12 @@
 	position: relative;
 	padding-top: 50px;
 	margin-bottom: 50px;
-	background-image: url(../img/Group-3-copy@1x.jpg);
+	background-image: url(../img/sliderbg@1x.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top center;
 	@include retina {
-		background-image: url(../img/Group-3-copy@2x.jpg);
+		background-image: url(../img/sliderbg@2x.jpg);
 	}
 	@media (min-width: 576px){
 		padding-top: 75px;
@@ -20,6 +20,9 @@
 	.slick-slider{
 		position: relative;
 		bottom: -20px;
+		img{
+			width: 100%;
+		}
 		@media (min-width: 576px){
 			bottom: -30px;
 		}
